--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
-api_key=
-IBM_CLOUD_URL=
-project_id=
+api_key= 
+IBM_CLOUD_URL= 
+project_id= 
 TOKENIZERS_PARALLELISM=
 ELASTIC_CLOUD_ID = 
 ELASTIC_PASSWORD = 
+ELASTIC_CERTIFICATE_DIR = 
+ELASTIC_API_KEY = 
 EMBEDDING_MODEL_NAME=
 EMBEDDING_MODEL_KWARGS_DEVICE=
+
 
